<resources>
    <string name="app_name">Caixa de Supermercado</string>
    <string name="activity_title">Detalhes do Produto</string>
    <string name="tv_title">Caixa de Supermercado</string>
    <string name="cd_cart">Carrinho vermelho vetorizado.</string>
    <string name="tv_app_description">Esse aplicativo vai te ajudar a calcular o preço dos seus produtos! Para isso digite o nome do produto, a quantidade, valor e por fim clicque no botão de calcular para verificar o valor da sua compra!</string>
    <string name="btn_calculate">Calcular</string>
    <string name="et_product_name">Nome do Produto: @{name}</string>
    <string name="et_qty">Quantidade: @{qty}</string>
    <string name="et_unitary_value">Valor Unitário: R$ @{unitaryValue}</string>
    <string name="tv_total_value">"O valor total é de: R$ @{unitaryValue*qty}</string>
    <string name="btn_recalculate">Refazer compra</string>
    <string name="error_message_blank">Digite as informações solicitadas</string>

</resources>