<?xml version="1.0" encoding="utf-8"?>

<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/iwCart"
        android:layout_width="@dimen/image_size_125"
        android:layout_height="@dimen/image_size_125"
        android:layout_margin="@dimen/standard_margin"
        android:contentDescription="@string/cd_cart"
        android:src="@drawable/cart"
        tools:layout_editor_absoluteX="16dp"
        tools:layout_editor_absoluteY="114dp"
        tools:ignore="MissingConstraints" />

    <TextView
        android:id="@+id/tvAppDescription"
        android:layout_width="227dp"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/tv_app_description"
        android:textAlignment="center"
        android:textSize="@dimen/font_size_16"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.627"
        app:layout_constraintStart_toEndOf="@+id/iwCart"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.15" />

    <Button
        android:backgroundTint="@color/red"
        android:id="@+id/btnCalculate"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:text="@string/btn_calculate"
        android:textAllCaps="true"
        app:layout_constraintTop_toBottomOf="@+id/etUnitaryValue" />

    <EditText
        android:id="@+id/etProductName"
        android:importantForAutofill="no"
        android:inputType="text"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:layout_marginTop="120dp"
        android:hint="@string/et_product_name"
        android:textAllCaps="true"
        android:textSize="@dimen/font_size_12"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvAppDescription" />

    <EditText
        android:id="@+id/etQty"
        android:importantForAutofill="no"
        android:inputType="number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:hint="@string/et_qty"
        android:textAllCaps="true"
        android:textSize="@dimen/font_size_12"
        app:layout_constraintTop_toBottomOf="@+id/etProductName" />

    <EditText
        android:id="@+id/etUnitaryValue"
        android:importantForAutofill="no"
        android:inputType="numberDecimal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="@dimen/standard_margin"
        android:hint="@string/et_unitary_value"
        android:textAllCaps="true"
        android:textSize="@dimen/font_size_12"
        app:layout_constraintTop_toBottomOf="@+id/etQty" />

</androidx.constraintlayout.widget.ConstraintLayout>